spectec/test/elab/neg/parse-hint-on-plain-no-bar-single.spectec
;; Plain-type alias declared without a leading bar carries a hint, which
;; is only allowed on variant cases.

syntax foo = nat hint(blah)
